<resources>
    <string name="app_name">Projet</string>
    <string name="title_activity_login">Connexion</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_pseudo">Pseudo</string>
    <string name="prompt_lieux">Adresse</string>

    <string name="date">Date</string>
    <string name="nom_event">Nom de l\'event</string>

    <string name="action_sign_in">Inscription</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="sauve">Sauvegarder</string>
    <string name="photoProfil">Photo de profil</string>
    <string name="modif_compte">Modifier compte</string>
    <string name="error_invalid_email">Cette adresse mail est invalide</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="error_incorrect_password">Ce mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_event">Créer évènement</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="no_account">Vous avez pas de compte ? Inscrivez vous</string>
    <string name="yes_account">Vous avez un compte ? Connectez-vous</string>
    <string name="pseudo">Pseudo</string>
    <string name="title_activity_modif_compte">Modifier Compte</string>
    <string name="title_activity_test">test</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_les_evenements">Les Evenements</string>
    <string name="rechercher">Rechercher</string>
    <string name="recherche">Recherche</string>
    <string name="participe">Je participe</string>
    <string name="participePas">Je ne participe pas</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Accueil</string>
    <string name="title_creer">Creer</string>
    <string name="title_my_events">Mes events</string>

    <string name="urlHttp">http://10.0.2.2:8080</string>
</resources>
